--- a/pages/home.html
+++ b/pages/home.html
@@ -82,7 +82,7 @@
 
 					<h3 class="subtitle"><a href="/auth" id="loginLinkText"></a></h3>
 					<h3 id="links">
-						<a href="https://weeb.codes/Waifu-Services/gang.moe" target="_blank" class="is-danger">View on WeebCodes</a><span>|</span><a id="ShareX" href="https://gang.moe/gang.moe.sxcu">ShareX</a><span>|</span><a href="/donation" target="_blank" class="is-danger">Donation</a><span>|</span><a href="https://skid.land" target="_blank" class="is-danger">IRC (#pomf)</a><span>|</span><a href="/faq" class="is-danger">FAQ</a><span>|</span><a href="/auth" target="_blank" class="is-danger">Dashboard</a>
+						<a href="https://github.com/dying/gang.moe" target="_blank" class="is-danger">View on GitHub</a><span>|</span><a id="ShareX" href="https://gang.moe/gang.moe.sxcu">ShareX</a><span>|</span><a href="/donation" target="_blank" class="is-danger">Donation</a><span>|</span><a href="https://skid.land" target="_blank" class="is-danger">IRC (#pomf)</a><span>|</span><a href="/faq" class="is-danger">FAQ</a><span>|</span><a href="/auth" target="_blank" class="is-danger">Dashboard</a>
 						<a></a>
 					</h3>
 
